<resources>
    <string name="app_name">SMACFI-19</string>
    <string name="bienvenido">Bienvenido a SMACFI-19</string>
    <string name="inicio">SMACFI-19</string>
    <string name="gel">Gel antibacterial</string>
    <string name="alumnos">Alumnos</string>
    <string name="reportes">Reportes</string>
    <string name="canalizar">Canalizar</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="title_activity_freporte">Freporte</string>
    <string name="historial">Historial</string>
    <string name="perfil">Perfil</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="cerrar_sesion">Cerrar sesión</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!--Strings de interfaz de reportes-->
    <string name="tit">Reportes</string>
    <string name="cod">Código de barras de la persona</string>
    <string name="Ndoctor">Nombre del doctor</string>
    <string name="temp">Temperatura</string>
    <string name="peso">Peso</string>
    <string name="altura">Altura</string>
    <string name="sint">Síntomas</string>
    <string name="obs">Observaciones</string>
    <string name="guardarR">Guardar</string>

    <!--Strings de la interfaz de historial de reportes-->
    <string name="titu">Diagnósticos</string>
    <string name="Create">Agregar</string>
    <string name="Update">Actualizar</string>
    <string name="Delete">Eliminar</string>

    <string name="diagnosticos">Diagnósticos</string>
    <string name="porcentaje">50%</string>
    <string name="codigoDeBarras">Código de barras</string>
    <string name="aceptar">Aceptar</string>
    <string name="eliminar">Eliminar</string>
    <string name="matricula">Matrícula</string>
    <string name="nombre">Nombre</string>
    <string name="diagnostico">Diagnostico</string>
    <string name="estado">Estado</string>
    <string name="carrera">Carrera</string>
    <string name="area">Área</string>
    <string name="grupo">Grupo</string>
    <string name="observacion">Observaciones</string>
    <string name="temperatura">Temperatura</string>
    <string name="simtomas">Síntomas</string>
    <string name="fecha">Fecha</string>
    <string name="buscar">Buscar</string>
    <string name="alu">Alumnos</string>
    <string name="canal">Canalizar</string>

    <!--Strings de la interfaz de perfil-->
    <string name="usuario">Usuario:</string>
    <string name="genero">Genero:</string>
    <string name="correo">Correo:</string>
    <string name="rol">Rol:</string>
    <string name="nombre2">Nombre:</string>
    <string name="mi_perfil">Mi perfil</string>
    <string name="sistema">Sistema</string>
</resources>