<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".Diagnostcos">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titu"
                android:textAlignment="center"
                android:fontFamily="@font/blenda_script"
                android:textColor="#4168C6"
                android:textSize="50dp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="0dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:background="#BEFFFFFF"
                android:backgroundTint="#BEFFFFFF"
                android:text="@string/codigoDeBarras" />

            <androidx.appcompat.widget.SearchView
                android:id="@+id/btnEscaner"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:drawableStart="@android:drawable/ic_menu_camera" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnagregar"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="25dp"
                    android:background="@drawable/botonsesion"
                    android:text="@string/Create"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btnactualizar"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="25dp"
                    android:background="@drawable/botonsesion"
                    android:text="@string/Update"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btneliminar"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="25dp"
                    android:background="@drawable/botonsesion"
                    android:text="@string/Delete"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>

        <TableLayout
            android:layout_width="368dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10sp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:padding="3dip"
                    android:text="@string/cod"
                    android:textSize="15dp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:padding="3dip"
                    android:text="@string/Ndoctor"
                    android:textSize="15dp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:padding="3dip"
                    android:text="@string/temp"
                    android:textSize="15dp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:padding="3dip"
                    android:text="@string/peso"
                    android:textSize="15dp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:padding="3dip"
                    android:text="@string/altura"
                    android:textSize="15dp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:padding="3dip"
                    android:text="@string/sint"
                    android:textSize="15dp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:padding="3dip"
                    android:text="@string/obs"
                    android:textSize="15dp"
                    android:textStyle="bold" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>