<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".controllers.Diagnosticos">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diagnosticos"
                android:textAlignment="center"
                android:fontFamily="@font/blenda_script"
                android:textColor="#4168C6"
                android:textSize="50dp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="0dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/txtMatricula"
                android:layout_width="270dp"
                android:layout_height="40dp"
                android:layout_marginStart="35dp"
                android:background="#BEFFFFFF"
                android:backgroundTint="#BEFFFFFF"
                android:text="@string/matricula"
                android:textAlignment="center" />

            <Button
                android:id="@+id/btnBuscar"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:drawableStart="@android:drawable/ic_search_category_default" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnAgregar"
                    android:layout_width="90dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="2dp"
                    android:background="@drawable/botonsesion"
                    android:text="@string/Create"
                    android:textColor="#FFFFFF"
                    android:textSize="13sp" />

                <Button
                    android:id="@+id/btnActualizar"
                    android:layout_width="110dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="2dp"
                    android:background="@drawable/botonsesion"
                    android:text="@string/Update"
                    android:textColor="#FFFFFF"
                    android:textSize="13sp" />

                <Button
                    android:id="@+id/btnEliminar"
                    android:layout_width="90dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="25dp"
                    android:background="@drawable/botonsesion"
                    android:text="@string/Delete"
                    android:textColor="#FFFFFF"
                    android:textSize="13sp" />
            </LinearLayout>

        </LinearLayout>

        <TableLayout
            android:layout_width="350dp"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/contorno">

                <TextView
                    android:layout_height="26dp"
                    android:background="@drawable/bordes_tabla"
                    android:padding="1dp"
                    android:text="@string/nombre"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:layout_marginStart="1dp"/>

                <TextView
                    android:id="@+id/txtNombre"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bordes_tabla"
                    android:padding="3dp"
                    android:text=""
                    android:textSize="15dp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/contorno">

                <TextView
                    android:layout_height="26dp"
                    android:background="@drawable/bordes_tabla"
                    android:padding="2dp"
                    android:text="@string/grupo"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:layout_marginStart="1dp"/>

                <TextView
                    android:id="@+id/txtGrupo"
                    android:layout_width="match_parent"
                    android:padding="3dp"
                    android:text=""
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:background="@drawable/bordes_tabla"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/contorno">

                <TextView
                    android:layout_height="26dp"
                    android:background="@drawable/bordes_tabla"
                    android:padding="2dp"
                    android:text="@string/carrera"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:layout_marginStart="1dp"/>

                <TextView
                    android:id="@+id/txtCarrera"
                    android:layout_width="match_parent"
                    android:padding="3dp"
                    android:text=""
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:background="@drawable/bordes_tabla"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/contorno">

                <TextView
                    android:layout_height="26dp"
                    android:background="@drawable/bordes_tabla"
                    android:padding="2dp"
                    android:text="@string/area"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:layout_marginStart="1dp"/>

                <TextView
                    android:id="@+id/txtArea"
                    android:layout_width="match_parent"
                    android:padding="3dp"
                    android:text=""
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:background="@drawable/bordes_tabla"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/contorno">

                <TextView
                    android:layout_height="26dp"
                    android:background="@drawable/bordes_tabla"
                    android:padding="2dp"
                    android:text="@string/sistema"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:layout_marginStart="1dp"/>

                <TextView
                    android:id="@+id/txtSistema"
                    android:layout_width="match_parent"
                    android:padding="3dp"
                    android:text=""
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:background="@drawable/bordes_tabla"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/contorno">

                <TextView
                    android:layout_height="26dp"
                    android:background="@drawable/bordes_tabla"
                    android:padding="2dp"
                    android:text="@string/temperatura"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:layout_marginStart="1dp"/>

                <TextView
                    android:id="@+id/txtTemperatura"
                    android:layout_width="match_parent"
                    android:padding="3dp"
                    android:text=""
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:background="@drawable/bordes_tabla"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/contorno">

                <TextView
                    android:layout_height="26dp"
                    android:background="@drawable/bordes_tabla"
                    android:padding="2dp"
                    android:text="@string/simtomas"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:layout_marginStart="1dp"/>

                <TextView
                    android:id="@+id/txtSintomas"
                    android:layout_width="match_parent"
                    android:padding="3dp"
                    android:text=""
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:background="@drawable/bordes_tabla"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/contorno">

                <TextView
                    android:layout_height="26dp"
                    android:background="@drawable/bordes_tabla"
                    android:padding="2dp"
                    android:text="@string/altura"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:layout_marginStart="1dp"/>

                <TextView
                    android:id="@+id/txtAltura"
                    android:layout_width="match_parent"
                    android:padding="3dp"
                    android:text=""
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:background="@drawable/bordes_tabla"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/contorno">

                <TextView
                    android:layout_height="26dp"
                    android:background="@drawable/bordes_tabla"
                    android:padding="2dp"
                    android:text="@string/peso"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:layout_marginStart="1dp"/>

                <TextView
                    android:id="@+id/txtPeso"
                    android:layout_width="match_parent"
                    android:padding="3dp"
                    android:text=""
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:background="@drawable/bordes_tabla"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/contorno">

                <TextView
                    android:layout_height="26dp"
                    android:background="@drawable/bordes_tabla"
                    android:padding="2dp"
                    android:text="@string/diagnostico"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:layout_marginStart="1dp"/>

                <TextView
                    android:id="@+id/txtDiagnostico"
                    android:layout_width="match_parent"
                    android:padding="3dp"
                    android:text=""
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:background="@drawable/bordes_tabla"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/contorno">

                <TextView
                    android:layout_height="26dp"
                    android:background="@drawable/bordes_tabla"
                    android:padding="2dp"
                    android:text="@string/observacion"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:layout_marginStart="1dp"/>

                <TextView
                    android:id="@+id/txtObservaciones"
                    android:layout_width="match_parent"
                    android:padding="3dp"
                    android:text=""
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:background="@drawable/bordes_tabla"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/contorno">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1dp"
                    android:background="@drawable/bordes_tabla"
                    android:padding="2dp"
                    android:text="@string/fecha"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtFecha"
                    android:layout_width="match_parent"
                    android:padding="3dp"
                    android:layout_marginBottom="1dp"
                    android:text=""
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:background="@drawable/bordes_tabla"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>